# olx_laptops_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: bot.py  config.py  database.py  keyboards.py  monitor.py  parser.py  states.py
