[project]
name = "olx-laptops-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "apscheduler>=3.11.3",
    "beautifulsoup4>=4.15.0",
    "curl-cffi>=0.15.0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]
